<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <TextView
                android:text="@string/title_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ContentTitle"
                />
            <TextView
                android:text="@string/content_me"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp"
                android:textSize="16sp"
                />
        </LinearLayout>
        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            tools:src="@drawable/profile_image"
            android:scaleType="fitCenter"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        />

    <TextView
        android:text="@string/title_heart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ContentTitle"
        />
    <TextView
        android:id="@+id/content_heart"
        android:text="@string/content_heart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Content"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        />

    <TextView
        android:text="@string/title_trade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ContentTitle"
        />
    <TextView
        android:id="@+id/content_trade"
        android:text="@string/content_trade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Content"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        />

    <TextView
        android:text="@string/title_aspiration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ContentTitle"
        />
    <TextView
        android:text="@string/content_aspiration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Content"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        />

</LinearLayout>